Shang New Live/src/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Total_No_of_Modules__c</fullName>
        <label>Total No of Modules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Unit_s__c</fullName>
        <label>Total Unit(s)</label>
        <summaryFilterItems>
            <field>Units__c.Space_Type__c</field>
            <operation>contains</operation>
            <value>Open Counter, Shop</value>
        </summaryFilterItems>
        <summaryForeignKey>Units__c.Property__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type_of_Properties__c</fullName>
        <label>Type of Properties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Commercial/Retail</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Serviced Apartment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Sq.ft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utilised_Plot_Ratio__c</fullName>
        <label>Utilised Plot Ratio</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Usage_Remarks__c</fullName>
        <inlineHelpText>Used to display in Monthly Invoice PDF</inlineHelpText>
        <label>Utility Usage Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Valuation_per_GFA_SQF__c</fullName>
        <label>Valuation per GFA (SQF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valuation_per_GFA_SQM__c</fullName>
        <formula>Valuation_per_GFA_SQF__c  / 10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valuation per GFA (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Witholding_Tax_Limit__c</fullName>
        <label>Witholding Tax Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Witholding_Tax__c</fullName>
        <label>Witholding Tax (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yield_NLA_SQF__c</fullName>
        <label>Yield NLA (SQF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yield_NLA_SQM__c</fullName>
        <formula>Yield_NLA_SQF__c /10.7639</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield NLA (SQM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Short_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Total_Carpark_s__c</columns>
        <columns>Total_Unit_s__c</columns>
        <columns>UOM__c</columns>
        <columns>Target_Opening_Date__c</columns>
        <columns>Actual_Opening_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllHotels</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Total_Carpark_s__c</columns>
        <columns>UOM__c</columns>
        <columns>Target_Opening_Date__c</columns>
        <columns>Actual_Opening_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property__c.Hotel</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Training</value>
        </filters>
        <label>All Hotels</label>
    </listViews>
    <listViews>
        <fullName>AllMalls</fullName>
        <columns>NAME</columns>
        <columns>Short_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Total_Carpark_s__c</columns>
        <columns>Total_Unit_s__c</columns>
        <columns>UOM__c</columns>
        <columns>Target_Opening_Date__c</columns>
        <columns>Actual_Opening_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Short_Code__c</field>
            <operation>notEqual</operation>
            <value>TM</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property__c.Mall</value>
        </filters>
        <label>All Malls</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOffices</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Total_Carpark_s__c</columns>
        <columns>Total_Unit_s__c</columns>
        <columns>UOM__c</columns>
        <columns>Target_Opening_Date__c</columns>
        <columns>Actual_Opening_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property__c.Office</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Training</value>
        </filters>
        <label>All Offices</label>
    </listViews>
    <listViews>
        <fullName>All_properties</fullName>
        <columns>NAME</columns>
        <columns>Short_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Total_Carpark_s__c</columns>
        <columns>Total_Unit_s__c</columns>
        <columns>UOM__c</columns>
        <columns>Target_Opening_Date__c</columns>
        <columns>Actual_Opening_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All properties</label>
    </listViews>
    <listViews>
        <fullName>South_Region_Hotels</fullName>
        <columns>NAME</columns>
        <columns>Leasable_Area_SQM__c</columns>
        <columns>Region__c</columns>
        <columns>Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>South</value>
        </filters>
        <label>South Region Hotels</label>
    </listViews>
    <listViews>
        <fullName>TrainingProperty</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Total_Carpark_s__c</columns>
        <columns>UOM__c</columns>
        <columns>Target_Opening_Date__c</columns>
        <columns>Actual_Opening_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Training</value>
        </filters>
        <label>Training Property</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <recordTypes>
        <fullName>Hotel</fullName>
        <active>true</active>
        <label>Hotel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Industrial</fullName>
        <active>true</active>
        <label>Industrial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mall</fullName>
        <active>true</active>
        <label>Mall</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mixed_Development</fullName>
        <active>true</active>
        <label>Mixed Development</label>
    </recordTypes>
    <recordTypes>
        <fullName>Office</fullName>
        <active>true</active>
        <label>Office</label>
    </recordTypes>
    <recordTypes>
        <fullName>Residential</fullName>
        <active>true</active>
        <label>Residential</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Apartment</fullName>
        <active>true</active>
        <label>Service Apartment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>